Fixed action button label alignment for firefox

--- a/src/WebComponents/ActionButton/action-button.less
+++ b/src/WebComponents/ActionButton/action-button.less
@@ -32,6 +32,10 @@ vi-action-button {
                 display: inline-block;
             }
         }
+
+        > span {
+            vertical-align: top;
+        }
     }
 
     &[overflow] {
